Closed Bug 1426199 Opened 8 years ago Closed 8 years ago

Assertion failure: mSize.width % 2 == 0, at z:/build/build/src/gfx/webrender_bindings/RenderD3D11TextureHostOGL.cpp:256

Categories

(Core :: Graphics: WebRender, defect, P1)

Other Branch
x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: kats, Assigned: sotaro)

References

Details

(Whiteboard: [gfx-noted][triage])

Attachments

(2 files, 1 obsolete file)

Windows 10, debug build, run: MOZ_WEBRENDER=1 ./mach crashtest dom/media/test/crashtests/789075-1.html Sample log that contains this assertion failure is at https://treeherder.mozilla.org/logviewer.html#?job_id=151779504&repo=try&lineNumber=7851
Assignee: nobody → sotaro.ikeda.g
ASSERT seems too strong. We need ASSERT like in ConvertYCbCrToRGB() seems enough. https://dxr.mozilla.org/mozilla-central/source/gfx/ycbcr/YCbCrUtils.cpp#99
Attached patch patch - Relax ASSERT checks (obsolete) — Splinter Review
Attachment #8964239 - Attachment description: patch - Relax ASSERT check → patch - Relax ASSERT checks
Update comments.
Attachment #8964239 - Attachment is obsolete: true
Attachment #8964241 - Flags: review?(nical.bugzilla)
Attachment #8964241 - Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment on attachment 8965954 [details] [diff] [review] Re-enable more crashtests Thanks!
Attachment #8965954 - Flags: review?(sotaro.ikeda.g) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/d7db6788fe91 Re-enable more crashtests that are now passing. r=sotaro
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: