Bug 1426199 - Relax ASSERT checks r=nical